add deleting unused dictionaries